--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 
     <p class="copyright">© 2022 Rendheer Joshy.</p>
     <a href="https://www.flaticon.com/free-icons/technology" title="technology icons">Technology icons created by Eucalyp - Flaticon</a>
+    <br />
+    <a href="https://www.flaticon.com/free-icons/leadership" title="leadership icons">Leadership icons created by Uniconlabs - Flaticon</a>
+    <br />
+    <a href="https://www.flaticon.com/free-icons/arrangement" title="arrangement icons">Arrangement icons created by Eucalyp - Flaticon</a>
+    <br />
+    <a href="https://www.flaticon.com/free-icons/cloud-computing" title="cloud computing icons">Cloud computing icons created by Eucalyp - Flaticon</a>
   </div>
 
 
