--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
   <div class="top-container">
     <img class="top-cloud" src="images/cloud-computing.png" alt="cloud img">
     <h1> I'm Joshy</h1>
@@ -34,7 +35,7 @@
       <div class="skill-row">
         <img class="leader-img" src="images/leadership.png" alt="">
         <h3>Leadership</h3>
-        <p>Build and lead large teams, resources and platforms. Ensure that the team knows that I will be there to guide and work alongside my teams. Celebrate success, learn from failures, and build a team that is happy to come to work the next day.
+        <p class="leader-skill-description">Build and lead large teams, resources and platforms. Ensure that the team knows that I will be there to guide and work alongside my teams. Celebrate success, learn from failures, and build a team that is happy to come to work the next day.
         </p>
       </div>
       <div class="skill-row">
